[package]
name = "tangy"
description = "Tang server implementation"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Martyn P <martyn@datasync.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rocket = "0.5.0"
tangy-lib = "0.1.6"
#tangy-lib = { path = "../tangy-lib" }
