[package]
name = "tangy"
description = "Tang server implementation"
version = "0.2.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Martyn P <martyn@datasync.dev>"]
repository = "https://github.com/martynp/tangy"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rocket = "0.5.1"
tangy-lib = "0.1"
#tangy-lib = { path = "../tangy-lib" }
