[package]
name = "tangy"
description = "Tang server implementation"
version = "0.2.8"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Martyn P <martyn@datasync.dev>"]
repository = "https://github.com/martynp/tangy"
readme = "readme.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rocket = "0.5.1"
tangy-lib = "0.1"
#tangy-lib = { path = "../tangy-lib" }
